# task

./: CMakeLists.txt  README.md  collect_data.cpp  collect_data_full.cpp  extract_object_features.cpp  sacParams.txt  segment_files.cpp  viewaffordanceweights.cpp  viewaffordanceweights_old.cpp  viewaffordanceweights_sum.cpp  viewaffordanceweights_sum_all.cpp  viewfeatures.cpp  viewfeaturesall.cpp  viewgrasp.cpp  viewgraspfactor.cpp  viewsymmetry.cpp
copy_content_to_build_dir/: codebook_40_hog.txt  gmmCovs.txt  gmmMeans.txt  gmmPriors.txt  gmmProjmat_0.02_0.03_40_20.txt  paramfile.txt  pcaProjMat.txt  pcdiffparam.txt  rgb.txt  rgb140.txt  rgb30.txt  rgb_big.txt  rgbhtml.txt
copy_content_to_build_dir/bowmodels/: gmmCovs_fpfh_0.01_0.03_10_0.txt  gmmCovs_fpfh_0.01_0.03_20_10.txt  gmmCovs_fpfh_0.01_0.03_20_20.txt  gmmCovs_fpfh_0.01_0.03_40_10.txt  gmmCovs_fpfh_0.01_0.05_10_0.txt  gmmCovs_fpfh_0.01_0.05_20_0.txt  gmmCovs_fpfh_0.01_0.05_20_10.txt  gmmCovs_fpfh_0.01_0.05_20_20.txt  gmmCovs_fpfh_0.01_0.05_20_40.txt  gmmCovs_fpfh_0.01_0.05_40_0.txt  gmmCovs_fpfh_0.01_0.05_40_10.txt  gmmCovs_fpfh_0.01_0.05_40_20.txt  gmmCovs_fpfh_0.02_0.02_10_0.txt  gmmCovs_fpfh_0.02_0.02_20_0.txt  gmmCovs_fpfh_0.02_0.02_20_10.txt  gmmCovs_fpfh_0.02_0.02_20_20.txt  gmmCovs_fpfh_0.02_0.02_40_0.txt  gmmCovs_fpfh_0.02_0.02_40_10.txt  gmmCovs_fpfh_0.02_0.02_40_20.txt  gmmCovs_fpfh_0.02_0.03_20_0.txt  gmmCovs_fpfh_0.02_0.03_40_0.txt  gmmCovs_fpfh_0.02_0.03_40_10.txt  gmmCovs_fpfh_0.02_0.03_40_20.txt  gmmCovs_fpfh_0.02_0.06_10_0.txt  gmmCovs_fpfh_0.02_0.06_20_0.txt  gmmCovs_fpfh_0.02_0.06_20_10.txt  gmmCovs_fpfh_0.02_0.06_20_20.txt  gmmCovs_fpfh_0.02_0.06_40_0.txt  gmmCovs_fpfh_0.02_0.06_40_10.txt  gmmCovs_fpfh_0.02_0.06_40_20.txt  gmmMeans_fpfh_0.01_0.03_10_0.txt  gmmMeans_fpfh_0.01_0.03_20_0.txt  gmmMeans_fpfh_0.01_0.03_20_10.txt  gmmMeans_fpfh_0.01_0.03_20_20.txt  gmmMeans_fpfh_0.01_0.03_40_10.txt  gmmMeans_fpfh_0.01_0.03_40_20.txt  gmmMeans_fpfh_0.01_0.05_10_0.txt  gmmMeans_fpfh_0.01_0.05_20_0.txt  gmmMeans_fpfh_0.01_0.05_20_10.txt  gmmMeans_fpfh_0.01_0.05_20_20.txt  (+131 more)
features/: CMakeLists.txt  featurecolorhist.cpp  featurecolorhist.h  featurecolorquantization.cpp  featurecolorquantization.h  featurefpfh.cpp  featurefpfh.h  featurehog.cpp  featurehog.h  featureopening.cpp  featureopening.h  featureposesurfaceangle.cpp  featureposesurfaceangle.h  featuretexture.cpp  featuretexture.h  ftr_fpfh_knn.cpp  ftr_fpfh_knn.h  mainaxes.cpp  mainaxes.h
helper_libs/: CMakeLists.txt  PCLTypedefs.h  bagofwords.cpp  bagofwords.h  boosthelperfuns.cpp  boosthelperfuns.h  compile.sh  cuboid.cpp  cuboid.hpp  eigenhelperfuns.cpp  eigenhelperfuns.h  kmeans.cpp  kmeans.h  kmedoids.cpp  kmedoids.h  main.cpp  myhelperfuns.cpp  myhelperfuns.h  opencvhelperfuns.cpp  opencvhelperfuns.h  pca.cpp  pca.h  pclhelperfuns.cpp  pclhelperfuns.h
model/: CMakeLists.txt  graspfactor.cpp  graspfactor.h  graspsegmenter.cpp  graspsegmenter.h  graspsynthesis.cpp  graspsynthesis.h  scenesegmentation.cpp  scenesegmentation.h  symmetrycompletion.cpp  symmetrycompletion.h
pcds/: bottle1.ppm
ransac/: CMakeLists.txt  sac3dcirclewithnormal.cpp  sac3dcirclewithnormal.h  saccuboid.cpp  saccuboid.h
segment/: img4.ppm  imgout.ppm  pnmfile.h  segment  segment-image.h  segment.cpp
segment/segment.dSYM/Contents/Resources/DWARF/: segment
